[package]
name = "adventofcode-2023"
version = "0.1.12"
edition = "2021"
default-run = "adventofcode-2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sscanf = "0.4.1"
itertools = "0.12.0"
hashbrown = "0.14.3"
regex = "1.10.2"
nalgebra = "0.32.3"
priority-queue = "1.3.2"
serde_json = "1.0.108"
rayon = "1.8.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
anyhow = "1.0.75"
reqwest = { version = "0.11.13", features = ["blocking"]  }
clap = { version = "4.4.10", features = ["derive"] }
